--- a/About.html
+++ b/About.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/Assets/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/Css/grid.css">
-    <link rel="stylesheet" href="/Css/Style.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="grid.css">
+    <link rel="stylesheet" href="Style.css">
     <title>About me</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
 </div>
     <div class="abt-cntr flex">
         <h2>About Us</h2>
-        <img src="/Assets/300x300.jpg" alt="about me image" width="300px" height="300px">
+        <img src="300x300.jpg" alt="about me image" width="300px" height="300px">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis sint provident ratione quo, ea sapiente ut laborum laboriosam ab repellendus libero nostrum distinctio ducimus nemo quam qui, iusto suscipit? Quibusdam laboriosam sunt non dignissimos beatae. Iste commodi quo cumque at.</p>
         
     </div>
