--- a/Expertise.html
+++ b/Expertise.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/Assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <title>Expertise</title>
-    <link rel="stylesheet" href="/Css/grid.css">
-    <link rel="stylesheet" href="/Css/Style.css">
+    <link rel="stylesheet" href="grid.css">
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
        <!-- cursor ball -->
